--- a/package.json
+++ b/package.json
@@ -9,9 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^5.2.3",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@supabase/supabase-js": "^2.44.4",
+    "class-variance-authority": "^0.7.0",
+    "clerk": "^0.8.3",
+    "clsx": "^2.1.1",
+    "lucide": "^0.407.0",
+    "lucide-react": "^0.407.0",
+    "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.5"
+    "react-google-places-autocomplete": "^4.0.1",
+    "tailwind-merge": "^2.4.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "postcss": "^8",
