--- a/package.json
+++ b/package.json
@@ -10,17 +10,24 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^5.2.3",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-radio-group": "^1.2.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@supabase/supabase-js": "^2.44.4",
+    "all": "^0.0.0",
     "class-variance-authority": "^0.7.0",
     "clerk": "^0.8.3",
     "clsx": "^2.1.1",
+    "formik": "^2.4.6",
     "lucide": "^0.407.0",
     "lucide-react": "^0.407.0",
     "next": "14.2.5",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-google-places-autocomplete": "^4.0.1",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7"
   },
